deployments/web-demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-demo
  labels:
    name: web-demo
