deployments/web-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-demo-svc
  namespace: web-demo
spec:
  type: ClusterIP
  selector:
    app: web-demo
  ports:
  - port: 8080
    targetPort: 80
